docs: add text seg corrections

--- a/docs/examples/text-segmentation.ipynb
+++ b/docs/examples/text-segmentation.ipynb
@@ -24,8 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup\n",
-    "\n",
+    "## Setup\n",
     "First we import packages and define a few utility functions.\n",
     "This section can be skipped at first reading.\n",
     "\n",
@@ -38,12 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re  # For regular expression\n",
-    "from textwrap import wrap  # Format text output nicely\n",
     "from pathlib import Path\n",
     "\n",
-    "import matplotlib.cm as cm\n",
-    "import matplotlib.pyplot as plt\n",
     "import nltk\n",
     "import numpy as np\n",
     "import ruptures as rpt  # our package\n",
@@ -73,41 +68,6 @@
    "metadata": {},
    "source": [
     "**Utility functions.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fig_ax(figsize=(15, 5), dpi=150):\n",
-    "    \"\"\"Return a (matplotlib) figure and ax objects with given size.\"\"\"\n",
-    "    return plt.subplots(figsize=figsize, dpi=dpi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_original_text(filepath: Path) -> (list, list):\n",
-    "    \"\"\"Read a file and return the text and the paragraphs' boundaries.\n",
-    "\n",
-    "    The text is returned as a list of sentences.\n",
-    "    The paragraphs' boundaries are returned as a list of indexes.\n",
-    "    \"\"\"\n",
-    "    list_of_excerpts = filepath.read_text().strip(\"==========\\n\").split(\"==========\")\n",
-    "    true_bkps = list()\n",
-    "    original_text = list()\n",
-    "    for excerpt in list_of_excerpts:\n",
-    "        list_of_sentences = excerpt.strip(\"\\n\").split(\"\\n\")\n",
-    "        true_bkps.append(len(list_of_sentences))\n",
-    "        original_text.extend(list_of_sentences)\n",
-    "    true_bkps = np.cumsum(true_bkps).tolist()\n",
-    "\n",
-    "    return original_text, true_bkps"
    ]
   },
   {
@@ -157,10 +117,11 @@
    "outputs": [],
    "source": [
     "# Loading the text\n",
-    "filepath = Path(\"../data/0.ref\")\n",
-    "original_text, true_bkps = load_original_text(filepath=filepath)\n",
+    "filepath = Path(\"../data/text-segmentation-data.txt\")\n",
+    "original_text = filepath.read_text().split(\"\\n\")\n",
+    "TRUE_BKPS = [11, 20, 30, 40, 49, 59, 69, 80, 90, 99]  # read from the data description\n",
     "\n",
-    "print(f\"There are {len(original_text)} sentences, from {len(true_bkps)} documents.\")"
+    "print(f\"There are {len(original_text)} sentences, from {len(TRUE_BKPS)} documents.\")"
    ]
   },
   {
@@ -198,7 +159,7 @@
     "**Preprocessing**\n",
     "\n",
     "Before performing text segmentation, the original text is preprocessed.\n",
-    "In a nutshell (see [[Choi2000](#Choi2000)] for more detail),\n",
+    "In a nutshell (see [[Choi2000](#Choi2000)] for more details),\n",
     "\n",
     "- the punctuation and stopwords are removed;\n",
     "- words are reduced to their stems (e.g., \"waited\" and \"waiting\" become \"wait\");\n",
@@ -258,9 +219,9 @@
     "\n",
     "$$ k_{\\text{cosine}}(x, y) := \\frac{\\langle x \\mid y \\rangle}{\\|x\\|\\|y\\|} $$\n",
     "\n",
-    "where $x$ and $y$ are two $d$-dimensionnal vectors.\n",
+    "where $x$ and $y$ are two $d$-dimensionnal vectors of word counts.\n",
     "\n",
-    "Text segmnentation now amounts to a kernel change point detection (see LINK for more details).\n",
+    "Text segmentation now amounts to a kernel change point detection (see [[Truong2020]](#Truong2020) for more details).\n",
     "However, this particular kernel is not implemented in `ruptures` therefore we need to create a [custom cost function](../../user-guide/costs/costcustom).\n",
     "(Actually, it is implemented in `ruptures` but the current implementation does not exploit the sparse structure of the vectorized text representation and can therefore be slow.)\n",
     "\n",
@@ -271,7 +232,7 @@
     "c(y_{a..b}) = \\sum_{t=a}^{b-1} G_{t, t} - \\frac{1}{b-a} \\sum_{a \\leq s < b } \\sum_{a \\leq t < b} G_{s,t}\n",
     "$$\n",
     "\n",
-    "where $y_{a..b}$ is the subsignal $\\{y_a, y_{a+1},\\dots,y_{b-1}\\}$ and $G_{st}:=k(y_s, y_t)$.\n",
+    "where $y_{a..b}$ is the subsignal $\\{y_a, y_{a+1},\\dots,y_{b-1}\\}$ and $G_{st}:=k(y_s, y_t)$ (see CITATION for more details).\n",
     "In other words, $(G_{st})_{st}$ is the $T\\times T$ Gram matrix of $y$.\n",
     "Thanks to this formula, we can now implement our custom cost function (named `CosineCost` in the following cell)."
    ]
@@ -318,7 +279,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compute similarity matrix"
+    "If the number $K$ of change points is assumed to be known, we can use [dynamic programming](../../user-guide/detection/dynp) to search for the exact segmentation segmentation $\\hat{t}_1,\\dots,\\hat{t}_K$ that minimizes the sum of segment costs:\n",
+    "\n",
+    "$$\n",
+    "\\hat{t}_1,\\dots,\\hat{t}_K := \\text{arg}\\min_{t_1,\\dots,t_K} \\left[ c(y_{0..t_1}) + c(y_{t_1..t_2}) + \\dots + c(y_{t_K..T}) \\right].\n",
+    "$$"
    ]
   },
   {
@@ -327,20 +292,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the matrix\n",
-    "similarities = np.zeros((n_sentences, n_sentences))\n",
-    "# Fill the matrix with similarities\n",
-    "for i in np.arange(n_sentences):\n",
-    "    for j in np.arange(i, n_sentences):\n",
-    "        similarities[i, j] = cosine_similarity(preprocessed[i], preprocessed[j])\n",
-    "        similarities[j, i] = similarities[i, j]"
+    "n_bkps = 9  # there are 9 change points (10 text segments)\n",
+    "\n",
+    "algo = rpt.Dynp(custom_cost=CosineCost(), min_size=2, jump=1).fit(vectorized_text)\n",
+    "predicted_bkps = algo.predict(n_bkps=n_bkps)\n",
+    "\n",
+    "print(f\"True change points are\\t\\t{TRUE_BKPS}.\")\n",
+    "print(f\"Detected change points are\\t{predicted_bkps}.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Display similarity matrix"
+    "(Note that the last change point index is simply the length of the signal. This is by design.)\n",
+    "\n",
+    "Predicted breakpoints are quite close to the true change points.\n",
+    "Indeed, most estimated changes are less than one sentence away from a true change.\n",
+    "The last change is less accurately predicted with an error of 4 sentences.\n",
+    "To overcome this issue, one solution would be to consider a richer representation (compared to the sparse word frequency vectors).\n",
+    "\n",
+    "In the following cell, the two segmentations (true and predicted) can be visually compared.\n",
+    "For each paragraph, the sentence numbers are shown."
    ]
   },
   {
@@ -349,140 +322,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = fig_ax((4, 4))\n",
-    "plt.imshow(-np.log(similarities), cmap=cm.plasma)\n",
-    "ax.set_title(\"Cosine similarities matrix\", fontsize=10)\n",
-    "ax.set_xlabel(\"Sentence index\", fontsize=8)\n",
-    "ax.set_ylabel(\"Sentence index\", fontsize=8)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We see that some artifacts appear around the similarity matrix diagonal where the cosine measure are a bit higher. \n",
+    "true_segment_list = rpt.utils.pairwise([0] + TRUE_BKPS)\n",
+    "predicted_segment_list = rpt.utils.pairwise([0] + predicted_bkps)\n",
     "\n",
-    "The similarity matrix seems to be noisy when looking with a naked eye. We will see that this is not an issue for `ruptures` since the cosine similarity approach offers some nice mathematical properties that we describe below. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We use the [Dynamic Programming](../../user-guide/detection/dynp) search method since it has the two following nice properties :\n",
+    "for (n_paragraph, (true_segment, predicted_segment)) in enumerate(\n",
+    "    zip(true_segment_list, predicted_segment_list), start=1\n",
+    "):\n",
+    "    print(f\"Paragraph n°{n_paragraph:02d}\")\n",
+    "    start_true, end_true = true_segment\n",
+    "    start_pred, end_pred = predicted_segment\n",
     "\n",
-    "* It finds **optimal** boundaries\n",
-    "* It allows full modularity and can run with a [Custom Cost](../../user-guide/costs/costcustom) (the [KernelCPD](../../user-guide/detection/kernelcpd) search method implemented in C only allows for a pre-implemented list of kernels and those do not support natively a similarity matrix as an input)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the object and run the algorythm\n",
-    "algo = rpt.Dynp(custom_cost=MyCost(), min_size=2, jump=1).fit(similarities)\n",
-    "result = algo.predict(n_bkps=n_bkps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(result)\n",
-    "print(bkps)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Display results\n",
-    "\n",
-    "### Display boundaries within the text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nb_char = 60  # configure line character width\n",
-    "\n",
-    "# Initialize some counters\n",
-    "c_real_bkps_idx = 0\n",
-    "c_computed_bkps_icx = 0\n",
-    "line_counter = 1\n",
-    "\n",
-    "for i, sentence in enumerate(original):\n",
-    "    if i == bkps[c_real_bkps_idx]:\n",
-    "        # Display real boundaries\n",
-    "        print(f\"\\n\\t{'='*nb_char}\\n\")\n",
-    "        c_real_bkps_idx += 1\n",
-    "    if i == result[c_computed_bkps_icx]:\n",
-    "        # Display computed boundaries\n",
-    "        print(f\"\\t{'*' *nb_char}\")\n",
-    "        c_computed_bkps_icx += 1\n",
-    "    sentence_wrap = textwrap.wrap(\n",
-    "        sentence[:-1], width=nb_char\n",
-    "    )  # removes trailing '\\n' for readability purposes\n",
-    "    for j, c_sentence_wrap in enumerate(sentence_wrap):\n",
-    "        print(f\"{str(line_counter) + '.' if j == 0 else ''}\\t{c_sentence_wrap}\")\n",
-    "    line_counter += 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Display boundaries on the similarity matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = fig_ax((4, 4))  # creates figure\n",
-    "previous_bkp = 0\n",
-    "\n",
-    "for c_bpks in result:\n",
-    "    c_bpks -= 1\n",
-    "    ax.vlines(\n",
-    "        [c_bpks, previous_bkp],\n",
-    "        previous_bkp,\n",
-    "        c_bpks,\n",
-    "        color=\"black\",\n",
-    "        linestyles=\"dashed\",\n",
-    "        linewidth=0.8,\n",
+    "    start = min(start_true, start_pred)\n",
+    "    end = max(end_true, end_pred)\n",
+    "    msg = \" \".join(\n",
+    "        f\"{ind+1:02d}\" if (start_true <= ind < end_true) else \"  \"\n",
+    "        for ind in range(start, end)\n",
     "    )\n",
-    "    ax.hlines(\n",
-    "        [c_bpks, previous_bkp],\n",
-    "        previous_bkp,\n",
-    "        c_bpks,\n",
-    "        color=\"black\",\n",
-    "        linestyles=\"dashed\",\n",
-    "        linewidth=0.8,\n",
+    "    print(f\"(true)\\t{msg}\")\n",
+    "    msg = \" \".join(\n",
+    "        f\"{ind+1:02d}\" if (start_pred <= ind < end_pred) else \"  \"\n",
+    "        for ind in range(start, end)\n",
     "    )\n",
-    "    previous_bkp = c_bpks\n",
-    "plt.imshow(-np.log(similarities), cmap=cm.plasma)\n",
-    "ax.set_title(\"Cosine similarities matrix\\nWith computed boudaries\", fontsize=10)\n",
-    "ax.set_xlabel(\"Sentence index\", fontsize=8)\n",
-    "ax.set_ylabel(\"Sentence index\", fontsize=8)\n",
-    "plt.show()"
+    "    print(f\"(pred)\\t{msg}\")\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion"
+    "## Conclusion\n",
+    "\n",
+    "This example shows how to apply `ruptures` on a text segmentation task.\n",
+    "In detail, we detected shifts in the vocabulary of a collection of sentences using common NLP preprocessing and transformation.\n",
+    "This task amounts to a kernel change point detection procedure where the kernel is the cosine kernel.\n",
+    "\n",
+    "Such results can then be used to characterize the structure of text for subsequent NLP tasks.\n",
+    "This procedure should certainly be enriched with more relevant and compact representations to better detect changes."
    ]
   },
   {
@@ -501,8 +377,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for (start, end) in rpt.utils.pairwise([0] + bkps):\n",
-    "    excerpt = original[start:end]\n",
+    "for (start, end) in rpt.utils.pairwise([0] + TRUE_BKPS):\n",
+    "    excerpt = original_text[start:end]\n",
     "    for (n_line, sentence) in enumerate(excerpt, start=start + 1):\n",
     "        sentence = sentence.strip(\"\\n\")\n",
     "        print(f\"{n_line:>2}: {sentence}\")\n",
@@ -518,119 +394,16 @@
     "<a id=\"Choi2000\">[Choi2000]</a>\n",
     "Choi, F. Y. Y. (2000). Advances in domain independent linear text segmentation. Proceedings of the North American Chapter of the Association for Computational Linguistics Conference (NAACL), 26–33.\n",
     "\n",
-    "<a id=\"ChoiDataset\">[ChoiDataset]</a>\n",
-    "The dataset can be obtained from an archived version of the C99 segmentation [code release](http://web.archive.org/web/20010422042459/http://www.cs.man.ac.uk/~choif/software/C99-1.2-release.tgz). We thank [[Alemi & Ginsparg](#Alemi_Ginsparg)] for pointing to the dataset link. \n",
-    "\n",
-    "<a id=\"BrownCorpus\">[BrownCorpus]</a>\n",
-    "Manual accessible [here](http://icame.uib.no/brown/bcm.html), Henry Kučera and W. Nelson Francis, Brown University, Department of Linguistics, 1964, revised 1971, Revised and Amplified 1979\n",
-    "\n",
-    "<a id=\"Alemi_Ginsparg\">[Alemi & Ginsparg]</a>\n",
-    "Alexander A Alemi and Paul Ginsparg, Text Segmentation based on Semantic Word Embeddings, March 15th 2015, Cornell University, accessible [here](https://arxiv.org/pdf/1503.05543.pdf)\n",
-    "\n",
-    "<a id=\"Porter1980\">[Porter1980]</a>\n",
-    "M. Porter. 1980. An algorithm for suffix stripping. Program, 14(3):130-137, July. We "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## To be deleted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rank, to be deleted\n",
-    "def get_rank(matrix: np.array, vicinity: int):\n",
-    "    res = np.zeros(matrix.shape)\n",
-    "    n_lines, n_columns = matrix.shape\n",
-    "    for i in np.arange(n_lines):\n",
-    "        for j in np.arange(i, n_columns):\n",
-    "            sub_matrix = matrix[\n",
-    "                max(0, i - vicinity) : min(i + vicinity, n_lines),\n",
-    "                max(0, j - vicinity) : min(j + vicinity, n_columns),\n",
-    "            ]\n",
-    "            res[i, j] = np.sum(np.where(sub_matrix < matrix[i, j]))\n",
-    "            res[j, i] = res[i, j]\n",
-    "    return res\n",
-    "\n",
-    "\n",
-    "similarities_rank = get_rank(similarities, 3)\n",
-    "print(similarities_rank.shape)\n",
-    "fig, ax = fig_ax((5, 3))\n",
-    "plt.imshow(-similarities_rank, cmap=cm.plasma)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "algo = rpt.Pelt(custom_cost=MyCost(), min_size=2, jump=1).fit(similarities)\n",
-    "res_n_bkps = []\n",
-    "res_sum_of_cost = []\n",
-    "x = np.logspace(-0.5, 0.5, num=100)\n",
-    "for pen in x:\n",
-    "    result = algo.predict(pen=pen)\n",
-    "    # print(result)\n",
-    "    res_n_bkps.append(len(result) - 1)\n",
-    "    res_sum_of_cost.append(algo.cost.sum_of_costs(result))\n",
-    "\n",
-    "fig, ax = fig_ax((5, 3))\n",
-    "ax.plot(x, res_n_bkps, \"b-\")\n",
-    "ax.set_xlabel(\"penality\")\n",
-    "ax.set_ylabel(\"Number of computed break points\", color=\"b\")\n",
-    "ax.vlines(x[58], 0, 50, colors=\"red\")\n",
-    "\n",
-    "ax2 = ax.twinx()\n",
-    "ax2.plot(x, res_sum_of_cost, \"r.\")\n",
-    "ax2.set_ylabel(\"Sum of costs\", color=\"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "algo = rpt.Dynp(custom_cost=MyCost(), min_size=2, jump=1).fit(similarities)\n",
-    "\n",
-    "\n",
-    "def get_sum_of_cost(algo, n_bkps) -> float:\n",
-    "    \"\"\"Return the sum of costs for the change points `bkps`\"\"\"\n",
-    "    bkps = algo.predict(n_bkps=n_bkps)\n",
-    "    return algo.cost.sum_of_costs(bkps)\n",
-    "\n",
-    "\n",
-    "n_bkps_max = 20  # K_max\n",
-    "array_of_n_bkps = np.arange(1, n_bkps_max + 1)\n",
-    "\n",
-    "fig, ax = fig_ax((5, 3))\n",
-    "ax.plot(\n",
-    "    array_of_n_bkps,\n",
-    "    [get_sum_of_cost(algo=algo, n_bkps=i) for i in array_of_n_bkps],\n",
-    "    \"-*\",\n",
-    "    alpha=0.5,\n",
-    ")\n",
-    "ax.set_xticks(array_of_n_bkps)\n",
-    "ax.set_xlabel(\"Number of change points\")\n",
-    "ax.set_title(\"Sum of costs\")\n",
-    "ax.grid(axis=\"x\")\n",
-    "ax.set_xlim(0, n_bkps_max + 1)"
+    "<a id=\"Truong2020\">[Truong2020]</a>\n",
+    "Truong, C., Oudre, L., & Vayatis, N. (2020). Selective review of offline change point detection methods. Signal Processing, 167."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "rpt-dev",
    "language": "python",
-   "name": "python3"
+   "name": "rpt-dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -642,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
