style: fix link in notebook example

--- a/docs/examples/text-segmentation.ipynb
+++ b/docs/examples/text-segmentation.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "The text to segment is a concatenation of excerpts from ten different documents randomly selected from the so-called Brown corpus (described [here](http://icame.uib.no/brown/bcm.html)).\n",
     "Each excerpt has nine to eleven sentences, amounting to 99 sentences in total.\n",
-    "The complete text is shown in [Appendix A](#Appendix-A).\n",
+    "The complete text is shown in [Appendix A](#appendix-a).\n",
     "\n",
     "These data stem from a larger data set which is thoroughly described in [[Choi2000](#Choi2000)] and can be downloaded [here](https://web.archive.org/web/20030206011734/http://www.cs.man.ac.uk/~mary/choif/software/C99-1.2-release.tgz).\n",
     "This is a common benchmark to evaluate text segmentation methods."
