docs: add gram representation

--- a/docs/examples/text-segmentation.ipynb
+++ b/docs/examples/text-segmentation.ipynb
@@ -47,7 +47,9 @@
     "from nltk.tokenize import regexp_tokenize\n",
     "from ruptures.base import BaseCost\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.cm as cm"
    ]
   },
   {
@@ -130,13 +132,7 @@
    "source": [
     "The objective is to automatically recover the boundaries of the 10 excerpts, using the fact that they come from quite different documents and therefore have distinct topics.\n",
     "\n",
-    "For instance, in the small extract of text printed in the following cell, an accurate text segmentation procedure would be able to detect that the first two sentences (10 and 11) and the last three sentences (12 to 14) belong to two different documents and have with very different semantic fields.\n",
-    "\n",
-    "<!--\n",
-    "<p align=\"center\">\n",
-    "  <img width=\"50%\" src=\"/images/choi_example.png\">\n",
-    "</p>\n",
-    "-->"
+    "For instance, in the small extract of text printed in the following cell, an accurate text segmentation procedure would be able to detect that the first two sentences (10 and 11) and the last three sentences (12 to 14) belong to two different documents and have very different semantic fields."
    ]
   },
   {
@@ -215,6 +211,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Define cost function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To compare (the vectorized representation of) two sentences, [[Choi2000]](#Choi2000) uses the cosine similarity $k_{\\text{cosine}}: \\mathbb{R}^d \\times \\mathbb{R}^d \\rightarrow \\mathbb{R}$:\n",
     "\n",
     "$$ k_{\\text{cosine}}(x, y) := \\frac{\\langle x \\mid y \\rangle}{\\|x\\|\\|y\\|} $$\n",
@@ -287,6 +290,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute change points"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -310,7 +320,14 @@
     "Predicted breakpoints are quite close to the true change points.\n",
     "Indeed, most estimated changes are less than one sentence away from a true change.\n",
     "The last change is less accurately predicted with an error of 4 sentences.\n",
-    "To overcome this issue, one solution would be to consider a richer representation (compared to the sparse word frequency vectors).\n",
+    "To overcome this issue, one solution would be to consider a richer representation (compared to the sparse word frequency vectors)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results visualization\n",
     "\n",
     "In the following cell, the two segmentations (true and predicted) can be visually compared.\n",
     "For each paragraph, the sentence numbers are shown."
@@ -348,6 +365,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(4, 4), dpi=200)  # creates figure\n",
+    "previous_bkp = 0\n",
+    "\n",
+    "for c_bpks in predicted_bkps:\n",
+    "    # For the sake of lisibility, we substract 0.5 to left align boundaries\n",
+    "    ax.vlines(\n",
+    "        [c_bpks - 0.5, previous_bkp - 0.5],\n",
+    "        previous_bkp - 0.5,\n",
+    "        c_bpks - 0.5,\n",
+    "        linewidth=0.8,\n",
+    "    )\n",
+    "    ax.hlines(\n",
+    "        [c_bpks - 0.5, previous_bkp - 0.5],\n",
+    "        previous_bkp - 0.5,\n",
+    "        c_bpks - 0.5,\n",
+    "        linewidth=0.8,\n",
+    "    )\n",
+    "    previous_bkp = c_bpks\n",
+    "plt.imshow(-np.log(algo.cost.gram.toarray()), cmap=cm.plasma)\n",
+    "ax.set_title(\n",
+    "    \"Gram matrix represented as a similarity matrix\\nWith detected boudaries\",\n",
+    "    fontsize=10,\n",
+    ")\n",
+    "ax.set_xlabel(\"Sentence index\", fontsize=8)\n",
+    "ax.set_ylabel(\"Sentence index\", fontsize=8)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see with this representation, detected boundaries capture pretty well the semantic differences between the 10 text excerpts. \n",
+    "\n",
+    "As for the biggest error for the boundary between the penultimate and last excerpts (detected at index 94 whereas the true one is at index 90), we can see on this visualization of the Gram matrix the underlying reasons :\n",
+    "\n",
+    "* the penultimate excerpt does not demonstrate a strong compact semantic unity,\n",
+    "* the last excerpts has a very strong compact semantic unity in the last 5 sentences. \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -357,7 +420,7 @@
     "In detail, we detected shifts in the vocabulary of a collection of sentences using common NLP preprocessing and transformation.\n",
     "This task amounts to a kernel change point detection procedure where the kernel is the cosine kernel.\n",
     "\n",
-    "Such results can then be used to characterize the structure of text for subsequent NLP tasks.\n",
+    "Such results can then be used to characterize the structure of the text for subsequent NLP tasks.\n",
     "This procedure should certainly be enriched with more relevant and compact representations to better detect changes."
    ]
   },
@@ -401,9 +464,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rpt-dev",
+   "display_name": "ruptures",
    "language": "python",
-   "name": "rpt-dev"
+   "name": "ruptures"
   },
   "language_info": {
    "codemirror_mode": {
@@ -415,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.6.8-final"
   }
  },
  "nbformat": 4,
