docs: modify text segmentation notebook

--- a/docs/examples/text-segmentation.ipynb
+++ b/docs/examples/text-segmentation.ipynb
@@ -49,7 +49,8 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.cm as cm"
+    "import matplotlib.cm as cm\n",
+    "from matplotlib.colors import LogNorm"
    ]
   },
   {
@@ -92,6 +93,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_square_on_ax(start, end, ax, linewidth=0.8):\n",
+    "    \"\"\"Draw a square on the given ax object.\"\"\"\n",
+    "    ax.vlines(\n",
+    "        x=[start - 0.5, end - 0.5],\n",
+    "        ymin=start - 0.5,\n",
+    "        ymax=end - 0.5,\n",
+    "        linewidth=linewidth,\n",
+    "    )\n",
+    "    ax.hlines(\n",
+    "        y=[start - 0.5, end - 0.5],\n",
+    "        xmin=start - 0.5,\n",
+    "        xmax=end - 0.5,\n",
+    "        linewidth=linewidth,\n",
+    "    )\n",
+    "    return ax"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -102,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Description**\n",
+    "### Description\n",
     "\n",
     "The text to segment is a concatenation of excerpts from ten different documents randomly selected from the so-called Brown corpus (described [here](http://icame.uib.no/brown/bcm.html)).\n",
     "Each excerpt has nine to eleven sentences, amounting to 99 sentences in total.\n",
@@ -152,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Preprocessing**\n",
+    "### Preprocessing\n",
     "\n",
     "Before performing text segmentation, the original text is preprocessed.\n",
     "In a nutshell (see [[Choi2000](#Choi2000)] for more details),\n",
@@ -211,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define cost function"
+    "### Cost function"
    ]
   },
   {
@@ -282,18 +306,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Compute change points\n",
+    "\n",
     "If the number $K$ of change points is assumed to be known, we can use [dynamic programming](../../user-guide/detection/dynp) to search for the exact segmentation $\\hat{t}_1,\\dots,\\hat{t}_K$ that minimizes the sum of segment costs:\n",
     "\n",
     "$$\n",
     "\\hat{t}_1,\\dots,\\hat{t}_K := \\text{arg}\\min_{t_1,\\dots,t_K} \\left[ c(y_{0..t_1}) + c(y_{t_1..t_2}) + \\dots + c(y_{t_K..T}) \\right].\n",
     "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Compute change points"
    ]
   },
   {
@@ -327,7 +346,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Results visualization\n",
+    "### Visualize segmentations\n",
+    "\n",
+    "**Show sentence numbers.**\n",
     "\n",
     "In the following cell, the two segmentations (true and predicted) can be visually compared.\n",
     "For each paragraph, the sentence numbers are shown."
@@ -365,49 +386,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Show the Gram matrix.**\n",
+    "\n",
+    "In addition, the text segmentation can be shown on the Gram matrix that was used to detect changes.\n",
+    "This is done in the following cell.\n",
+    "\n",
+    "Most segments (represented by the blue squares) are similar between the true segmentation and the predicted segmentation, except for last two.\n",
+    "This is mainly due to the fact that, in the penultimate excerpt, all sentences are dissimilar (with respect to the cosine measure)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(4, 4), dpi=200)  # creates figure\n",
-    "previous_bkp = 0\n",
+    "fig, ax_arr = plt.subplots(nrows=1, ncols=2, figsize=(7, 5), dpi=200)\n",
     "\n",
-    "for c_bpks in predicted_bkps:\n",
-    "    # For the sake of lisibility, we substract 0.5 to left align boundaries\n",
-    "    ax.vlines(\n",
-    "        [c_bpks - 0.5, previous_bkp - 0.5],\n",
-    "        previous_bkp - 0.5,\n",
-    "        c_bpks - 0.5,\n",
-    "        linewidth=0.8,\n",
-    "    )\n",
-    "    ax.hlines(\n",
-    "        [c_bpks - 0.5, previous_bkp - 0.5],\n",
-    "        previous_bkp - 0.5,\n",
-    "        c_bpks - 0.5,\n",
-    "        linewidth=0.8,\n",
-    "    )\n",
-    "    previous_bkp = c_bpks\n",
-    "plt.imshow(-np.log(algo.cost.gram.toarray()), cmap=cm.plasma)\n",
-    "ax.set_title(\n",
-    "    \"Gram matrix represented as a similarity matrix\\nWith detected boudaries\",\n",
-    "    fontsize=10,\n",
-    ")\n",
-    "ax.set_xlabel(\"Sentence index\", fontsize=8)\n",
-    "ax.set_ylabel(\"Sentence index\", fontsize=8)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As we can see with this representation, detected boundaries capture pretty well the semantic differences between the 10 text excerpts. \n",
+    "# plot config\n",
+    "title_fontsize = 10\n",
+    "label_fontsize = 7\n",
+    "title_list = [\"True text segmentation\", \"Predicted text segmentation\"]\n",
     "\n",
-    "As for the biggest error for the boundary between the penultimate and last excerpts (detected at index 94 whereas the true one is at index 90), we can see on this visualization of the Gram matrix the underlying reasons :\n",
-    "\n",
-    "* the penultimate excerpt does not demonstrate a strong compact semantic unity,\n",
-    "* the last excerpts has a very strong compact semantic unity in the last 5 sentences. \n"
+    "for (ax, title, bkps) in zip(ax_arr, title_list, [TRUE_BKPS, predicted_bkps]):\n",
+    "    # plot gram matrix\n",
+    "    ax.imshow(algo.cost.gram.toarray(), cmap=cm.plasma, norm=LogNorm())\n",
+    "    # add text segmentation\n",
+    "    for (start, end) in rpt.utils.pairwise([0] + bkps):\n",
+    "        draw_square_on_ax(start=start, end=end, ax=ax)\n",
+    "    # add labels and title\n",
+    "    ax.set_title(title, fontsize=title_fontsize)\n",
+    "    ax.set_xlabel(\"Sentence index\", fontsize=label_fontsize)\n",
+    "    ax.set_ylabel(\"Sentence index\", fontsize=label_fontsize)\n",
+    "    ax.tick_params(axis=\"both\", which=\"major\", labelsize=label_fontsize)"
    ]
   },
   {
@@ -464,9 +478,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ruptures",
+   "display_name": "rpt-dev",
    "language": "python",
-   "name": "ruptures"
+   "name": "rpt-dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -478,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8-final"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
