docs: add authors

--- a/docs/examples/text-segmentation.ipynb
+++ b/docs/examples/text-segmentation.ipynb
@@ -466,6 +466,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Authors\n",
+    "\n",
+    "This example notebook has been authored by Olivier Boulant and edited by Charles Truong."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## References\n",
     "\n",
     "<a id=\"Choi2000\">[Choi2000]</a>\n",
@@ -478,9 +487,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rpt-dev",
+   "display_name": "ruptures",
    "language": "python",
-   "name": "rpt-dev"
+   "name": "ruptures"
   },
   "language_info": {
    "codemirror_mode": {
@@ -492,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
