docs: add text segmentation example (#142)
* doc(text): create first sandbox notebook

* Add work in progress notebooks for various approaches

* docs: refine notebook

* docs: add text segmentation to examples

* docs: add text segmentation example data

* docs: add text segmentation sample data snapshot

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* docs: re-arrange import cell

* docs: delete sandbox

* docs: fix path error

* docs: image path

* docs: minor adjustments

* docs: add binder dependencies

* docs: corrections notebook

* docs: add data for text seg example

* docs: remove old data for text seg example

* docs: add text seg corrections

* docs: typos

* docs: typo

* style: remove old image

* style: fix link in notebook example

* docs: add gram representation

* docs: modify text segmentation notebook

* docs: add authors

* chore: change max number of parallel jobs for matrix strategy

* chore: max-parallel should be under strategy and not matrix

* chore: trying without python v3.6

* chore: flatten tests on os

* chore: trying not to upgrade pip

* chore: revert commits debugging run-test Gh Actions

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: Charles T <charles@doffy.net>

--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -6,8 +6,13 @@
    "source": [
     "# Music segmentation\n",
     "\n",
-    "<!-- {{ add_binder_block(page) }} -->\n",
-    "\n",
+    "<!-- {{ add_binder_block(page) }} -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction\n",
     "\n",
     "Music segmentation can be seen as a change point detection task and therefore can be carried out with `ruptures`.\n",
@@ -21,8 +26,13 @@
     "\n",
     "In this example, we use the well-known tempogram representation, which is based on the onset strength envelope of the input signal, and captures tempo information [[Grosche2010]](#Grosche2010).\n",
     "\n",
-    "To load and manipulate sound data, we use the [librosa package](https://librosa.org/doc/latest/index.html) [[McFee2015]](#McFee2015).\n",
-    "\n",
+    "To load and manipulate sound data, we use the [librosa package](https://librosa.org/doc/latest/index.html) [[McFee2015]](#McFee2015)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Setup\n",
     "\n",
     "First, we make the necessary imports."
@@ -342,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.4"
   },
   "toc-autonumbering": false,
   "toc-showmarkdowntxt": false
