--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -271,7 +271,7 @@
    "metadata": {},
    "source": [
     "Visually, the estimated change points indeed separate portions of signal with a relatively constant tempo profile.\n",
-    "Going back to the original music signal, this intuition can be verified by listening to the indivudal segments defined by the changes points."
+    "Going back to the original music signal, this intuition can be verified by listening to the individual segments defined by the changes points."
    ]
   },
   {
