Fix pretty equation (ensemble-window)

--- a/docs/examples/ensemble-window.ipynb
+++ b/docs/examples/ensemble-window.ipynb
@@ -210,13 +210,19 @@
     "In the paper, they perform multiple tests on several scaling and aggregation functions on two datasets. In turned out that the *MinAbs* scaling function and the *WeightedSum* aggregation function worked the best.\n",
     "\n",
     "The *MinAbs* function is defined as follows:\n",
-    "For $s$ a timeseries, $$ \\textit{MinAbs}(s)_i = \\frac{s_i}{|\\min_{j}{s_j}|} $$\n",
+    "For $s$ a timeseries, \n",
+    "\n",
+    "$$\n",
+    "\\textit{MinAbs}(s)_i = \\frac{s_i}{|\\min_{j}{s_j}|}\n",
+    "$$\n",
     "\n",
     "The *WeightedSum* function is defined as follows:\n",
     "Let $s^n, n \\in \\{1, ..., N\\}$ be $N$ timeseries, we have to distinguish the \"original\" timeseries $s^n$ from its scaled version $\\overline{s}^n = \\textit{MinAbs}(s^n)$. We then have\n",
     "\n",
-    " $$ \\textit{WeightedSum}((s_n)_{n \\in \\{1, ..., N\\}})_i = \\sum_{n \\in \\{1, ..., N\\}}{\\lambda_n \\overline{s}_i^n} $$\n",
-    " where $ \\lambda_n = \\frac{\\max_{j}{s_j^n} - \\min_{j}{s_j^n}}{\\mu(s^n) - \\min_{j}{s_j^n}} $ with $\\mu(s^n)$ the mean of $s^n$."
+    "$$ \\textit{WeightedSum}((s_n)_{n \\in \\{1, ..., N\\}})_i = \\sum_{n \\in \\{1, ..., N\\}}{\\lambda_n \\overline{s}_i^n} \n",
+    "$$\n",
+    "\n",
+    "where $\\lambda_n = \\frac{\\max_{j}{s_j^n} - \\min_{j}{s_j^n}}{\\mu(s^n) - \\min_{j}{s_j^n}}$ with $\\mu(s^n)$ the mean of $s^n$."
    ]
   },
   {
